<resources>
    <string name="app_name">Initiative Tracker</string>
    <string name="character_name">Character Name</string>
    <string name="player_name">Player Name</string>
    <string name="armour_class">Armour Class</string>
    <string name="initiative">Initiative</string>
    <string name="hp">HP</string>
    <string name="current_hp">Current HP</string>
    <string name="maximum_hp">Maximum HP</string>
    <string name="speed">Speed</string>
    <string name="save">Save</string>
    <string name="next_player">Next Player</string>
    <string name="end_fight">End Fight</string>
    <string name="long_rest">Long Rest</string>
    <string name="add_player">Add Player</string>
    <string name="create">Create</string>
    <string name="npc">NPC</string>
    <string name="level">Level</string>
    <string name="delete">Delete</string>
</resources>