<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.calculator.MainActivity">
    <item
        android:id="@+id/next_player"
        android:orderInCategory="100"
        android:title="@string/next_player"
        android:icon="@drawable/ic_baseline_play_arrow_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/clear_initiative"
        android:orderInCategory="100"
        android:title="@string/clear_initiative"
        android:icon="@drawable/ic_baseline_stop_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/long_rest"
        android:orderInCategory="100"
        android:title="@string/long_rest"
        android:icon="@drawable/ic_baseline_hotel_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_player"
        android:orderInCategory="100"
        android:title="@string/add_player"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="ifRoom" />
</menu>