<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCharacterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_characterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/character_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/text_input_layout_playerName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5">

        <EditText
            android:id="@+id/editCharacterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            android:labelFor="@id/editCharacterName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_playerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/player_name"
        app:layout_constraintLeft_toRightOf="@+id/text_input_layout_characterName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5">

        <EditText
            android:id="@+id/editPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            android:labelFor="@id/editPlayerName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_initiative"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/initiative"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/text_input_layout_armourClass"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_characterName"
        app:layout_constraintWidth_percent="0.5">

        <EditText
            android:id="@+id/editInitiative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text|number"
            android:labelFor="@id/editInitiative" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_armourClass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/armour_class"
        app:layout_constraintLeft_toRightOf="@id/text_input_layout_initiative"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_characterName"
        app:layout_constraintWidth_percent="0.5">

        <EditText
            android:id="@+id/editArmourClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text|number"
            android:labelFor="@id/editArmourClass" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_currentHP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/current_hp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/text_input_layout_maxHP"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_initiative"
        app:layout_constraintWidth_percent="0.5">

        <EditText
            android:id="@+id/editCurrentHP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text|number"
            android:labelFor="@id/editCurrentHP" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_maxHP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/maximum_hp"
        app:layout_constraintLeft_toRightOf="@id/text_input_layout_currentHP"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_armourClass"
        app:layout_constraintWidth_percent="0.5">

        <EditText
            android:id="@+id/editMaxHP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text|number"
            android:labelFor="@id/editMaxHP" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/speed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/text_input_layout_level"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_currentHP"
        app:layout_constraintWidth_percent="0.5">

        <EditText
            android:id="@+id/editSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text|number"
            android:labelFor="@id/editSpeed" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/level"
        app:layout_constraintLeft_toRightOf="@id/text_input_layout_speed"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_maxHP"
        app:layout_constraintWidth_percent="0.5">

        <EditText
            android:id="@+id/editLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text|number"
            android:labelFor="@id/editLevel" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/npcCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/npc"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_speed"/>

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>